// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<NewsletterSignup
  apikey=""
  buttonText="Sign Up"
  emailPlaceholder="Email address"
  imageSrc="/themes/wipro/subscribe-bg.jpg"
  text="Don’t miss out on the latest Topcoder IOS challenges and information!"
  theme={
    Object {
      "container": "src-shared-components-tc-communities-NewsletterSignup-style___container___3RVJRq",
      "content": "src-shared-components-tc-communities-NewsletterSignup-style___content___aW-l41",
      "form": "src-shared-components-tc-communities-NewsletterSignup-style___form___3slczo",
      "formButton": "src-shared-components-tc-communities-NewsletterSignup-style___formButton___7KL-DH",
      "formEmail": "src-shared-components-tc-communities-NewsletterSignup-style___formEmail___1g9Hu2",
      "text": "src-shared-components-tc-communities-NewsletterSignup-style___text___1CCccd",
      "title": "src-shared-components-tc-communities-NewsletterSignup-style___title___3YAVhx",
    }
  }
  title="Sign up for our newsletter"
  url=""
/>
`;

exports[`Snapshot match 2`] = `
<NewsletterSignup
  apikey=""
  buttonText="Sign Up"
  emailPlaceholder="Email address"
  imageSrc="/themes/wipro/subscribe-bg.jpg"
  text="Don’t miss out on the latest Topcoder IOS challenges and information!"
  theme={
    Object {
      "container": "container src-shared-components-tc-communities-NewsletterSignup-style___container___3RVJRq",
      "content": "content src-shared-components-tc-communities-NewsletterSignup-style___content___aW-l41",
      "form": "form src-shared-components-tc-communities-NewsletterSignup-style___form___3slczo",
      "formButton": "formButton src-shared-components-tc-communities-NewsletterSignup-style___formButton___7KL-DH",
      "formEmail": "formEmail src-shared-components-tc-communities-NewsletterSignup-style___formEmail___1g9Hu2",
      "text": "text src-shared-components-tc-communities-NewsletterSignup-style___text___1CCccd",
      "title": "title src-shared-components-tc-communities-NewsletterSignup-style___title___3YAVhx",
    }
  }
  title="Sign up for our newsletter"
  url=""
/>
`;
